Expand project documentation across all modules
Rewrite the root README as a full entry point: the premise, the four
testing layers (JUnit, Fray, jcstress, JMH), the four Lamport buffer
implementations, and which tool catches which bug.

Expand every module README with what the module demonstrates, how its
tests are written and the commands to run them. Add demos/README.md as
the Maven project overview and slides/README.md for the Slidev deck.

Add CLAUDE.md and demos/CLAUDE.md with build/test guidance, including
the -Dexec.skip=true requirement (jcstress is bound to integration-test
and is not skipped by -DskipTests) and the fact that Fray iteration
count and scheduler are @ConcurrencyTest attributes, not system
properties.

Add docs/abstract.md with the Polish talk abstract.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013uVbUQB7ZovQRuZRxtCjhp